# scrape_articles

./: Makefile  pyproject.toml  requirements.txt
output/: articles.docx
scrape_articles/: main.py
scrape_articles/templates/: index.html
src/scrape_articles/: __init__.py  main.py
templates/: index.html
tests/: test_main.py
